changes some issues

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=tms_db
-DB_USERNAME=root
+DB_USERNAME=pma
 DB_PASSWORD=abcd
 
 BROADCAST_DRIVER=log
